Crash in [@ mozilla::a11y::TraversalRule::Match]
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox69 | --- | unaffected |
firefox70 | --- | unaffected |
firefox71 | --- | fixed |
firefox72 | --- | fixed |
People
(Reporter: cpeterson, Assigned: Jamie)
References
(Regression)
Details
(Keywords: regression)
Crash Data
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
I see these crash reports with this a11y crash signature from GV 71 Nightly in Focus, but not from GV 69 or 70. However, we didn't ship GV 70 to Focus users, so this crash might be a regression in GV 70 or 71.
Could this be a regression from native a11y bug 1564549 in GV 71?
I don't see any reports from Fenix Nightly (GV 71 Nightly) users, so perhaps there is some app code difference in Focus or Fenix doesn't have enough users to hit some rare corner case.
bp-4af22f95-9482-4283-bf26-7e0930191023
Frame Module Signature Source
0 libxul.so mozilla::a11y::TraversalRule::Match(mozilla::a11y::Accessible*) accessible/android/TraversalRule.cpp:42
1 libxul.so mozilla::a11y::Pivot::AdjustStartPosition(mozilla::a11y::Accessible*, mozilla::a11y::PivotRule&, unsigned short*) accessible/base/Pivot.cpp:35
2 libxul.so mozilla::a11y::Pivot::SearchForward(mozilla::a11y::Accessible*, mozilla::a11y::PivotRule&, bool) accessible/base/Pivot.cpp:105
3 libxul.so mozilla::a11y::AccessibleWrap::Pivot(int, bool, bool) accessible/android/AccessibleWrap.cpp:277
4 libxul.so mozilla::a11y::AccessibleWrap::HandleAccEvent(mozilla::a11y::AccEvent*) accessible/android/AccessibleWrap.cpp:0
5 libxul.so nsEventShell::FireEvent(mozilla::a11y::AccEvent*) accessible/base/nsEventShell.cpp:43
...
Updated•5 years ago
|
Comment 2•5 years ago
|
||
Discussed during Platform triage. tried to add a ni on :eejay but was unable to - adding back Jamie. https://crash-stats.mozilla.org/signature/?signature=mozilla%3A%3Aa11y%3A%3ATraversalRule%3A%3AMatch shows crashes for Fenix (they are under Fennec Android).
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 3•5 years ago
|
||
I don't have a test case for this crash, but the stack suggests the frame is null.
This can certainly happen for display: contents.
Comment 5•5 years ago
|
||
bugherder |
Reporter | ||
Comment 6•5 years ago
|
||
Jamie, once your fix lands in Fenix Nightly and looks good, we should uplift it to GeckoView Beta (71) because this crash was a regression in 71.
Assignee | ||
Comment 7•5 years ago
|
||
Chris, I assume this has landed in Fenix nightly by now? Are you able to tell whether this appears to have fixed the crash? Crash-stop doesn't seem to work here for some reason and the crash graphs are impossible to read with a screen reader. Thanks.
Reporter | ||
Comment 8•5 years ago
|
||
(In reply to James Teh [:Jamie] from comment #7)
Chris, I assume this has landed in Fenix nightly by now? Are you able to tell whether this appears to have fixed the crash? Crash-stop doesn't seem to work here for some reason and the crash graphs are impossible to read with a screen reader.
Your fix should be in Fenix Nightly now, but it's hard to tell if it fixed the TraversalRule crash. We only have a couple hundred Fenix Nightly users. Before your fix landed on November 4, we only saw about 1-4 TraversalRule crash reports per day. I don't see any TraversalRule crash reports in any Nightly build after November 4 (build ID 20191104094118).
So I think we can assume your fix landed in the November 5 build and fixed the crashes. I think we should your fix to Beta, if you are comfortable with that.
Assignee | ||
Comment 9•5 years ago
|
||
Comment on attachment 9106101 [details]
Bug 1590929: a11y::TraversalRule::Match: Don't assume that all Accessibles have a frame.
Beta/Release Uplift Approval Request
- User impact if declined: Crashes.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Straightforward null check.
- String changes made/needed: None.
Comment 10•5 years ago
|
||
Comment on attachment 9106101 [details]
Bug 1590929: a11y::TraversalRule::Match: Don't assume that all Accessibles have a frame.
Geckoview crash fix, uplift approved for 71 beta 10, thanks.
Comment 11•5 years ago
|
||
bugherder uplift |
Updated•3 years ago
|
Description
•