Bug 1590929: a11y::TraversalRule::Match: Don't assume that all Accessibles have a frame. r=MarcoZ a=pascalc

I don't have a test case for this crash, but the stack suggests the frame is null.
This can certainly happen for display: contents.

Differential Revision: https://phabricator.services.mozilla.com/D51560